Change default sheel

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,7 +2,7 @@ set -g mouse on
 set -g set-clipboard off
 
 set-option -g focus-events on
-set-option -g default-shell /usr/local/bin/fish
+set-option -g default-shell /opt/homebrew/bin/fish
 set -g pane-base-index 1
 set -g escape-time 0
 setw -g mode-keys vi
