--- a/tmux.conf
+++ b/tmux.conf
@@ -8,9 +8,9 @@ set -g escape-time 0
 setw -g mode-keys vi
 set-option -g history-limit 10000
 
-# set-option -g default-terminal "xterm-256color"
-# set-option -ga terminal-overrides ",alacritty:Tc,*256col*:Tc"
-# set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",alacritty:Tc,*256col*:Tc"
+set-option -g default-terminal "screen-256color"
 
 # set-option -sa terminal-overrides ',alacritty:RGB'
 # set -ga terminal-overrides ",xterm-256color:Tc"
@@ -55,7 +55,6 @@ bind e send-keys -t 2 Up Enter
 bind S choose-window 'join-pane -v -s "%%"'
 bind V choose-window 'join-pane -h -s "%%"'
 
-# set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'egel/tmux-gruvbox'
 
