--- a/tmux.conf
+++ b/tmux.conf
@@ -8,16 +8,9 @@ set -g escape-time 0
 setw -g mode-keys vi
 set-option -g history-limit 10000
 
-set-option -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",alacritty:Tc,*256col*:Tc"
-set-option -g default-terminal "screen-256color"
-
-# set-option -sa terminal-overrides ',alacritty:RGB'
-# set -ga terminal-overrides ",xterm-256color:Tc"
-
-
-# enable true color support and italics
-# set-option -g default-terminal "xterm-256color"
+set-option -g default-terminal "alacritty"
+set-option -ga terminal-overrides ",xterm-256color:Tc,alacritty:RGB"
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours
 
 # Use Alt-arrow keys without prefix key to switch panes
 bind -n M-h select-pane -L
