Change default folt

--- a/kitty.conf
+++ b/kitty.conf
@@ -8,13 +8,13 @@
 # bold_font Operator Mono Thick
 # bold_italic_font Operator Mono Medium
 # font_family      Input Mono
-font_family      Fira Code
-italic_font      auto
-bold_font        auto
-bold_italic_font auto
+font_family      Cascadia Code
+# italic_font      auto
+# bold_font        auto
+# bold_italic_font auto
 
 # Font size (in pts)
-font_size        10
+font_size        9
 
 # The foreground color
 foreground       #c0b18b
