--- a/tmux.conf
+++ b/tmux.conf
@@ -50,6 +50,7 @@ bind V choose-window 'join-pane -h -s "%%"'
 
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'egel/tmux-gruvbox'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
