Bring back tagbar and update font in kitty config

--- a/kitty.conf
+++ b/kitty.conf
@@ -8,7 +8,7 @@
 # bold_font Operator Mono Thick
 # bold_italic_font Operator Mono Medium
 # font_family      Input Mono
-font_family      Cascadia Code
+font_family      Fira Code
 # italic_font      auto
 # bold_font        auto
 # bold_italic_font auto
@@ -240,4 +240,3 @@ macos_option_as_alt no
 macos_titlebar_color background
 
 allow_remote_control yes
-
